<resources>
    <string name="app_name">Beers</string>
    <string name="beer_name">Beer name</string>
    <string name="beer_description">Description</string>
    <string name="beer_tagline">Tagline</string>
    <string name="beer_image_url">Image URL</string>
    <string name="beer_abv">ABV</string>
    <string name="add">Add</string>
    <string name="load_more">Load more</string>
</resources>
